--- a/Gibbed.IO/Gibbed.IO.csproj
+++ b/Gibbed.IO/Gibbed.IO.csproj
@@ -1,5 +1,6 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
     <Company>Gibbed</Company>
     <Authors>Gibbed</Authors>
     <Description>http://gib.me/</Description>
@@ -7,16 +8,4 @@
     <AssemblyVersion>1.2.0.0</AssemblyVersion>
     <FileVersion>1.2.0.0</FileVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(GibbedIO_TargetFrameworksToBuild)' == '' ">
-    <GibbedIO_TargetFrameworksToBuild>$(TargetFrameworksToBuild)</GibbedIO_TargetFrameworksToBuild>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(GibbedIO_TargetFrameworksToBuild)' == '' ">
-    <TargetFrameworks>netstandard2.0;net40;net45;net472;net48;net5.0</TargetFrameworks>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(GibbedIO_TargetFrameworksToBuild)' != '' ">
-    <TargetFrameworks>$(GibbedIO_TargetFrameworksToBuild)</TargetFrameworks>
-  </PropertyGroup>
-  <ItemGroup>
-    <None Remove=".git*" />
-  </ItemGroup>
 </Project>
